<resources>
    <string name="app_name">levantaientoInventarios</string>
    <string name="titulo_barra">AC</string>
    <string name="titulo_barra2">APP Inventarios</string>
    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombreUsuario">Nombre de Usuario</string>
    <string name="contraseñaApp">Contraseña de la App</string>
    <string name="login">Log In</string>
    <string name="sucursales">Selecciona una sucursal</string>
    <string name="bodegas">Selecciona la bodega</string>
    <string name="rubros">Selecciona el rubro</string>
    <string name="iniciar">Iniciar</string>
    <string name="scanqr">Scan QR</string>
    <string name="Primerconteo">Primer conteo</string>
    <string name="Segundoconteo">Segundo conteo</string>
    <string name="Terceconteo">Tercer conteo</string>
    <string name="conteo">Conteo</string>
    <string name="guardar">Guardar</string>
    <string name="finalizar">Finalizar</string>
    <string name="result_not_found">Sin Resultados</string>
    <string name="ancho">Ancho</string>
    <string name="alto">Alto</string>
    <string name="largo">Largo</string>
    <string name="segundoConteo">Segundo Conteo</string>
    <string name="tererConteo">Tercer Conteo</string>
    <string name="primerConteo">Primer Conteo</string>
    <string name="NoConteo">No Admite Mas Conteo</string>
    <string name="NoTercerConteo">No admite conteo</string>
</resources>