<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    tools:context=".Inventario">

    <include
        layout="@layout/app_barr_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/list_back"
        android:elevation="8dp"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/scanqr"
            android:layout_width="165dp"
            android:layout_height="49dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_input"
            android:fontFamily="@font/poppins_semibold_italic"
            android:text="@string/scanqr"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/descArt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scanqr"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/ubicacion"
            android:layout_width="121dp"
            android:layout_height="25dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/etiqueta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@tools:sample/last_names" />

        <TextView
            android:id="@+id/etiqueta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@tools:sample/date/hhmmss" />

        <TextView
            android:id="@+id/alto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.449"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descArt"
            tools:text="@tools:sample/date/hhmm" />

        <TextView
            android:id="@+id/alto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:text="@string/alto"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descArt"
            tools:text="@tools:sample/date/hhmm" />

        <TextView
            android:id="@+id/ancho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.192"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descArt"
            tools:text="@tools:sample/date/hhmm" />

        <TextView
            android:id="@+id/ancho2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:text="@string/ancho"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descArt"
            tools:text="@tools:sample/date/hhmm" />

        <TextView
            android:id="@+id/largo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.701"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descArt"
            tools:text="@tools:sample/date/hhmm" />

        <TextView
            android:id="@+id/largo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:text="@string/largo"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.702"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descArt"
            tools:text="@tools:sample/date/hhmm" />

        <TextView
            android:id="@+id/codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.641" />

        <TextView
            android:id="@+id/brazo"
            android:layout_width="151dp"
            android:layout_height="25dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_semibold_italic"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ubicacion"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.831"
            tools:text="@tools:sample/first_names" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/list_back"
        android:elevation="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:translationZ="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.093">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/Primerconteo"
            android:fontFamily="@font/poppins_semibold_italic"
            android:text="@string/Primerconteo"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/conteo"
            android:layout_width="268dp"
            android:layout_height="73dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:fontFamily="@font/poppins_bold_italic"
            android:hint="@string/conteo"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@id/textView14"
            android:textAlignment="center"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnguardar"
            android:layout_width="266dp"
            android:layout_height="52dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_input"
            android:fontFamily="@font/poppins_semibold_italic"
            android:shadowColor="@color/black"
            android:text="@string/guardar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conteo"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/finalizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/purple_500"
        android:fontFamily="@font/poppins_semibold_italic"
        android:text="@string/finalizar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.283" />

</androidx.constraintlayout.widget.ConstraintLayout>